# average_server

./: CMakeLists.txt  Makefile  main.cpp  queryparser.cpp  Тестовое задание C++.txt
